Bug 42694 - EDITING: Crash when insert Table Control
Summary: EDITING: Crash when insert Table Control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.5.0
Keywords: regression
: 44476 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-11-08 00:07 UTC by Rainer Bielefeld Retired
Modified: 2012-01-04 22:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
MacOS X 10.6.8 Crashlog for Bug 42694 (52.30 KB, text/plain)
2011-12-01 03:37 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-11-08 00:07:00 UTC
Steps how to reproduce with "LibreOffice 3.4.4RC2  - WIN7 Home Premium (64bit) English UI [OOO340m1 (Build:402)]" :

0. Start LibO, open new DRAWING from LibO Start Center
1. If necessary: Menu 'View -> Toolbars -> Form Controls' = check
2. Toolbar 'Form Controls' click icon 'More Controls'
3. If necessary, Customize tollbar and add icon 'Table controls'
4. Toolbar 'More Controls' click icon 'Table controls'
5. Click somewhere in the document and spread an area moving mouse pointer 
   with clicked mouse button 50mm down and 50mm to the right
6. release mouse button
   expected: some table appears
   actual: Crash

Still a problem with parallel installation of MinGW Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  2ba5d12-e8c71c5-41e7bcd-4b83b90)] (daily/MinGW_cross-compilation2011-10-25_00.12.09)"
and
with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  d3d1481-3f8994a-2ba0a9f)]" (110909)

Worked fine with "LibreOffice Portable 3.3.3  - WIN7  Home Premium (64bit) German UI [OOO330m19 (Build:301  Tag 3.3.3.1)]", so REGRESSION
Comment 1 Rainer Bielefeld Retired 2011-11-08 01:46:23 UTC
Works fine for all a.m. versions in WRITER and CALC
Comment 2 Roman Eisele 2011-12-01 03:36:15 UTC
Easily reproducible following the steps given by Rainer Bielefeld
with LibO-dev 3.5.0,
build ID: 549f928-b211287-090bcba-45cf606,
built on 2011-12-01,
running on MacOS X 10.6.8 German,
no langpack installed (default = US English UI).

I will attach the MacOX X crashlog.
Comment 3 Roman Eisele 2011-12-01 03:37:11 UTC
Created attachment 53999 [details]
MacOS X 10.6.8 Crashlog for Bug 42694
Comment 4 Caolán McNamara 2011-12-01 08:29:23 UTC
reproducible under Linux

  >│603             (sal_uInt16)(pDataWin->GetOutputSizePixel().Height() / GetDataRowHeight() + 1);                                       │

GetDataRowHeight() is 0, so divide by zero error
Comment 5 Caolán McNamara 2011-12-07 09:00:20 UTC
as far as I can tell, this broke between 2011-03-16 and 2011-03-19
Comment 6 Caolán McNamara 2011-12-08 05:27:56 UTC
aha, this is a bug we inherited from a merge from OpenOffice.org
Comment 9 Rainer Bielefeld Retired 2011-12-14 02:09:10 UTC
I still (or again?) see the crash with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta1 - WIN7 Home Premium (64bit) German UI [Build-ID: 7362ca8-b5a8e65-af86909-d471f98-61464c4] Windows_Release_Configuration  11-Dec-2011 06:51" 

and 

with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 485138f-e92bf75-4c1bcb5]" Win-x86@6 – 2011-12-06_21:37:02)

What might be the reason? Can the fix be integrated into 3.5.0?
Comment 10 Caolán McNamara 2011-12-14 02:18:54 UTC
I checked in these fixes on 2011-12-12. Your builds are from 
11-Dec-2011 and 2011-12-06, those precede these changes, no ?
Comment 11 Rainer Bielefeld Retired 2011-12-14 02:49:37 UTC
I'll have to wipe my glasses ;-)

thx!
Comment 12 Kurt 2011-12-17 08:09:33 UTC
Is there any intention to backport the fix to 3.4 for inclusion in 3.4.5?
Comment 13 Rainer Bielefeld Retired 2012-01-04 22:22:05 UTC
*** Bug 44476 has been marked as a duplicate of this bug. ***