Resolves: fdo#42694 crash inserting table control